fix(button): fixed button text color active/disabled on Safari and iOs (#1291)

--- a/src/button/button_theme_alfa-light.css
+++ b/src/button/button_theme_alfa-light.css
@@ -32,7 +32,7 @@
             background: var(--color-light-bg-secondary-inverted);
 
             .button__text {
-                color: var(--color-light-text-tertiary-inverted-transparent);
+                opacity: 0.2;
             }
         }
     }
@@ -62,7 +62,7 @@
             background: var(--color-light-bg-secondary-inverted);
 
             .button__text {
-                color: var(--color-light-text-tertiary-inverted-transparent);
+                opacity: 0.2;
             }
         }
     }
@@ -77,7 +77,7 @@
         background: var(--color-light-bg-secondary);
 
         .button__text {
-            color: var(--color-light-text-disabled-transparent);
+            opacity: 0.2;
         }
     }
 }
