--- a/src/button/button_theme_alfa-on-color.css
+++ b/src/button/button_theme_alfa-on-color.css
@@ -95,7 +95,7 @@
         border-color: transparent;
 
         .button__text {
-            color: var(--color-content-disabled-alfa-on-color);
+            opacity: 0.4;
         }
     }
 }
